--- a/package.json
+++ b/package.json
@@ -48,14 +48,17 @@
     "@docusaurus/tsconfig": "^3.5.2",
     "@docusaurus/types": "^3.5.2",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.10.0",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
-    "eslint": "^9.10.0",
+    "@eslint/js": "^9.12.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
-    "globals": "^15.9.0",
+    "globals": "^15.11.0",
     "prettier": "3.3.3",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "path-to-regexp": "^3.3.0"
   },
   "browserslist": {
     "production": [
